# syntaxdot-ffi

./: .gitignore  COPYRIGHT  Cargo.toml  build.rs  flake.nix  shell.nix
.github/workflows/: release.yml
build-support/: crate-overrides.nix
include/: syntaxdot.h
proto/: syntaxdot.proto
scripts/: test-all.sh
src/: annotator.rs  error.rs  lib.rs  sentences.rs
