[package]
name = "syntaxdot-ffi"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
conllu = "0.5"
ffi-support = "0.4"
lazy_static = "1"
prost = "0.6"
serde_yaml = "0.8"
tch = "0.2"
thiserror = "1"
toml = "0.5"

[dependencies.syntaxdot]
git = "https://github.com/tensordot/syntaxdot.git"
branch = "main"
default-features = false

[dependencies.syntaxdot-transformers]
git = "https://github.com/tensordot/syntaxdot.git"
branch = "main"
default-features = false

[build-dependencies]
prost-build = "0.6"

[features]
model-tests = []
