[package]
name = "syntaxdot-ffi"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
conllu = "0.5"
ffi-support = "0.4"
lazy_static = "1"
prost = "0.6"
serde_yaml = "0.8"
syntaxdot = { version = "0.2", default-features = false }
syntaxdot-tch-ext = "0.2.0"
syntaxdot-tokenizers = "0.2.0"
syntaxdot-transformers = { version = "0.2", default-features = false }
tch = "0.3"
thiserror = "1"
toml = "0.5"

[build-dependencies]
prost-build = "0.6"

[features]
model-tests = []
