[package]
name = "syntaxdot-ffi"
version = "0.2.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
conllu = "0.5"
ffi-support = "0.4"
lazy_static = "1"
prost = "0.6"
serde_yaml = "0.8"
syntaxdot = { git = "https://github.com/tensordot/syntaxdot.git", branch = "main" }
syntaxdot-encoders = { git = "https://github.com/tensordot/syntaxdot.git", branch = "main" }
syntaxdot-tch-ext = { git = "https://github.com/tensordot/syntaxdot.git", branch = "main" }
syntaxdot-tokenizers = { git = "https://github.com/tensordot/syntaxdot.git", branch = "main" }
syntaxdot-transformers = { git = "https://github.com/tensordot/syntaxdot.git", branch = "main" }
tch = "0.3"
thiserror = "1"
toml = "0.5"

[build-dependencies]
prost-build = "0.6"

[dev-dependencies]
pretty_assertions = "0.6"

[features]
model-tests = []

[patch.crates-io]
tch = { git = "https://github.com/LaurentMazare/tch-rs.git" }